<resources>
    <string name="app_name">Radio-T</string>
    <string name="error">Error</string>
    <string name="failed_load_rss">Failed to load RSS feed</string>
    <string name="logotype">logotype</string>
    <string name="thumbnail">thumbnail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_podcast_detail">PodcastDetailActivity</string>
    <string name="cover">cover</string>
    <string name="previous_track">previous track</string>
    <string name="play_pause">play/pause</string>
    <string name="next_track">next track</string>
    <string name="time_placeholder">--:--</string>
    <string name="download">Download</string>
    <string name="podcast_is_cached">Podcast is cached</string>
</resources>
