<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/notification_height"
        android:layout_height="@dimen/notification_height"
        android:background="@color/bg_white"
        android:contentDescription="@string/cover"
        android:padding="@dimen/half_margin"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/half_margin"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/half_margin"
            android:singleLine="true"
            android:textColor="@color/colorSecondaryText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/notification_button_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_prev"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous_track"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingRight="@dimen/normal_margin"
            android:src="@drawable/ic_prev" />

        <ImageView
            android:id="@+id/iv_play_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/play_pause"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingRight="@dimen/normal_margin"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next_track"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingRight="@dimen/normal_margin"
            android:src="@drawable/ic_next" />

    </LinearLayout>

</LinearLayout>
