<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/notification_height_big"
        android:layout_height="@dimen/notification_height_big"
        android:background="@color/bg_white"
        android:contentDescription="@string/cover"
        android:padding="@dimen/half_margin"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/notification_height_big"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:maxLines="1"
            android:paddingEnd="@dimen/normal_margin"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingStart="@dimen/half_margin"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="@dimen/normal_margin"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingStart="@dimen/half_margin"
            android:singleLine="true"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:layout_marginStart="@dimen/half_margin"
            android:background="@android:color/darker_gray"
            android:progressDrawable="@drawable/progress_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/normal_margin"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingStart="@dimen/half_margin">

            <TextView
                android:id="@+id/tv_position"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_placeholder"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/tv_duration"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_placeholder"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_height"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_prev"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/previous_track"
                android:src="@drawable/ic_prev" />

            <ImageView
                android:id="@+id/iv_play_pause"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/next_track"
                android:src="@drawable/ic_next" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
